test/visibility/private/functions/accessSibling.good
accessSibling.chpl:10: In function 'main':
accessSibling.chpl:11: error: Cannot access 'foo', 'foo' is private to 'M1'
